Minor changes in design; Fixed visibility of teamCards

--- a/src/styles/contact/contactanimation.module.scss
+++ b/src/styles/contact/contactanimation.module.scss
@@ -232,9 +232,9 @@
 
 // Small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px) {
-  #sky {
-    height: 350px;
-  }
+//   #sky {
+//     height: 350px;
+//   }
 
   .contactanimation {
     margin-left: 0.2rem;
